Bug 87349 - Program terminated with signal SIGFPE, Arithmetic exception.
Summary: Program terminated with signal SIGFPE, Arithmetic exception.
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-16 07:33 UTC by Paul Menzel
Modified: 2015-02-04 16:25 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Paul Menzel 2014-12-16 07:33:28 UTC
Using Debian Sid/unstable with systemd 215-8, I still have problems that there are timeouts between systemd and D-Bus, even with the current D-Bus 1.8.12 [1]. Experiencing this again, where `systemd-logind.service` was not started, I was able to log in on tty1 but in the end I was unable to run any `sudo systemctl` commands as they timed out. I also was unable to reboot or halt the system.

Somewhere in that situation systemd also crashed with an arithmetic exception. (`Caught <FPE>` in `/var/log/syslog`)

Here is the backtrace.

Thread 1 (Thread 0xb73417c0 (LWP 3020)):
#0  0xb7650d3c in __kernel_vsyscall ()
No symbol table info available.
#1  0xb7603bb6 in raise (sig=8) at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c:37
        resultvar = <optimized out>
        resultvar = <optimized out>
        pid = <optimized out>
#2  0xb7686e6b in crash.lto_priv.235 (sig=8) at ../src/core/main.c:158
        rl = {rlim_cur = 18446744073709551615, rlim_max = 18446744073709551615}
        sa = {__sigaction_handler = {sa_handler = 0x0, sa_sigaction = 0x0}, sa_mask = {__val = {0 <repeats 32 times>}}, sa_flags = 0, 
          sa_restorer = 0x0}
        pid = <optimized out>
        __func__ = "crash"
        __PRETTY_FUNCTION__ = "crash"
#3  <signal handler called>
No symbol table info available.
#4  0xb772fcdf in manager_print_jobs_in_progress (m=0xb79c6bd0) at ../src/core/manager.c:170
        job_of_n = 0x0
        j = <optimized out>
        counter = 0
        cylon = "|\000\000\000\060ᶷ\000\000\000\000\001\000\000\000\002\000\000\000\003\000\000\000\004\000\000\000\001\000\000"
        time = "\002\000\000\000\003\000\000\000\005\000\000\000\001\000\000\000\002\000\000\000\003\000\000\000\004\000\000\000\005\000\000\000\000M\362\261\v\000\000\000\210P\245\267\071Hk\267h:{\267\005\000\000\000\v\000\000\000\210P\245\267"
        limit = "no limit", '\000' <repeats 55 times>
        x = <optimized out>
        i = 0x0
        cylon_pos = <optimized out>
#5  manager_dispatch_jobs_in_progress (source=0xb7b64fe8, usec=432972905, userdata=0xb79c6bd0) at ../src/core/manager.c:1846
        m = 0xb79c6bd0
        r = <optimized out>
        next = <optimized out>
        __PRETTY_FUNCTION__ = "manager_dispatch_jobs_in_progress"
#6  0xb76a157d in source_dispatch (s=0xb7b64fe8) at ../src/libsystemd/sd-event/sd-event.c:2024
        r = <optimized out>
        __PRETTY_FUNCTION__ = "source_dispatch"
        __func__ = "source_dispatch"
#7  0xb76a6b94 in sd_event_run (e=<optimized out>, timeout=<optimized out>) at ../src/libsystemd/sd-event/sd-event.c:2314
        ev_queue = <optimized out>
        ev_queue_max = <optimized out>
        p = <optimized out>
        r = <optimized out>
        i = <optimized out>
        m = 1
        timedout = false
        __PRETTY_FUNCTION__ = "sd_event_run"
#8  0xb7731f13 in manager_loop (m=0xb79c6bd0) at ../src/core/manager.c:1912
        wait_usec = 18446744073709551615
        rl = {interval = 1000000, begin = 432639580, burst = 50000, num = 26074}
        __PRETTY_FUNCTION__ = "manager_loop"
        __func__ = "manager_loop"
#9  0xb7685062 in main (argc=1, argv=0xbfe55314) at ../src/core/main.c:1743
        m = <optimized out>
---Type <return> to continue, or q <return> to quit---
        r = <optimized out>
        retval = 1
        before_startup = <optimized out>
        after_startup = <optimized out>
        timespan = " !4\267@\373d\267\234u_\267\070tE\267\364^_\267\001\000\000\000\000\000\000\000 \364e\267\210Q\345\277\000\060g\267dO\345\277 \372d\267 O\345\277\352\302e\267\320N\345\277\364^_\267"
        fds = 0x0
        reexecute = false
        shutdown_verb = 0x0
        initrd_timestamp = <optimized out>
        userspace_timestamp = {realtime = 1418677476056438, monotonic = 31671340}
        kernel_timestamp = {realtime = <optimized out>, monotonic = 0}
        security_start_timestamp = {realtime = 1418677476104972, monotonic = 31719875}
        security_finish_timestamp = {realtime = 1418677476138305, monotonic = 31753208}
        systemd = "systemd"
        skip_setup = <optimized out>
        j = <optimized out>
        loaded_policy = false
        arm_reboot_watchdog = false
        queue_default_job = <optimized out>
        empty_etc = <optimized out>
        switch_root_dir = 0x0
        switch_root_init = 0x0
        saved_rlimit_nofile = {rlim_cur = 1024, rlim_max = 4096}
        __func__ = "main"
        __PRETTY_FUNCTION__ = "main"

[1] https://bugs.freedesktop.org/show_bug.cgi?id=86431
Comment 1 Paul Menzel 2014-12-27 11:30:55 UTC
This is tracked as bug report #774012 [1] in the Debian BTS.

[1] http://bugs.debian.org/774012
Comment 2 Lennart Poettering 2015-01-05 17:02:26 UTC
I made some changes to git regarding this issue, please see:

http://lists.freedesktop.org/archives/systemd-devel/2015-January/026763.html
Comment 3 Lennart Poettering 2015-02-04 16:25:28 UTC
I am pretty sure this is fixe in git. Closing. Feel free to reopen should the issue resurface.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.